--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -10,7 +10,10 @@ body {
     //  h1 {
     //   color: black;
     //  }
-    a {
-        text-decoration: none;
-    }
+}
+body a {
+    text-decoration: none;
+}
+.external-link {
+    text-decoration: none;
 }
