--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -11,14 +11,15 @@ body {
     //   color: black;
     //  }
 }
-
 .external-link {
     text-decoration: none;
 }
-
 .markdown-rendered .internal-link {
     text-decoration: none;
 }
 a {
     text-decoration: none;
+}
+element.style {
+    font-size: 2rem;
 }
